[gd_scene load_steps=7 format=3 uid="uid://bwrs7gwxv55or"]

[ext_resource type="Script" path="res://scripts/pot.gd" id="1_70vul"]
[ext_resource type="Texture2D" uid="uid://ctpm6381wtd6k" path="res://Assets/Sprites/BonsaiPot.png" id="2_6mvev"]
[ext_resource type="AudioStream" uid="uid://bl5fracburlcf" path="res://Assets/Audio/pickupPop.mp3" id="3_x2rqc"]
[ext_resource type="AudioStream" uid="uid://db4snmllc4qor" path="res://Assets/Audio/setdownPop.mp3" id="4_a0lln"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bshxx"]
size = Vector2(14, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucbj5"]
size = Vector2(14, 7)

[node name="BonsaiPot" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 0
script = ExtResource("1_70vul")

[node name="SmallPot" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_6mvev")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_bshxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_ucbj5")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_x2rqc")

[node name="PlaceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a0lln")

[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_grab_area_body_exited"]
[connection signal="mouse_entered" from="GrabArea" to="." method="_on_grab_area_mouse_entered"]
[connection signal="mouse_exited" from="GrabArea" to="." method="_on_grab_area_mouse_exited"]
